Pre-update for hooking up autocomplete
* Added  code that regenerates a string of all a champion's attributes
  after each ability is added. This string will be used by the jQuery
  UI Autocomplete to actually perform the search

TODO:
* write more efficient code to manage the Champion class's search string

* actually get a basic autocomplete field working

--- a/index.html
+++ b/index.html
@@ -52,19 +52,39 @@
         // TODO: for now, only give abilities tags
 
         var Ability = function(name, key, tags) {
-            this._name = name;
-            this._key = key;
-            this._tags = tags;
+            this.name = name;
+            this.key = key;
+            this.tags = tags;
         }
 
         var Champion = function(name) {
-            this._name = name;
-            this._abilities = [];
+            this.name = name;
+            this.abilities = [];
+            this.searchString = this.name;
         }
 
+        // TODO: does JS support function overloading??
         Champion.prototype.addAbility = function(name, key, tags) {
             var ability = new Ability(name, key, tags);
-            this._abilities.push(ability);
+            this.abilities.push(ability);
+
+            // TODO: it's inefficient to rebuild this string *every time* we add a new ability
+            this.updateSearchString();
+        }
+
+        // TODO: use the new searchString variable to run the autocomplete!
+        Champion.prototype.updateSearchString = function() {
+            this.searchString = this.name;
+
+
+            for(var i = 0; i < this.abilities.length; i++) {
+                this.searchString = this.searchString + ' ' + this.abilities[i].name;
+                this.searchString = this.searchString + ' ' + this.abilities[i].key;
+
+                for(var j = 0; j < this.abilities[i].tags.length; j++) {
+                    this.searchString = this.searchString + ' ' + this.abilities[i].tags[j];
+                }
+            }
         }
 
         // TODO: include scaling ratios in abilities
