--- a/index.html
+++ b/index.html
@@ -46,261 +46,82 @@
         #champion-info {
             display: none;
         }
+
+        div.champion-container div.ability {
+            margin-right: 1em;
+            float: left;
+        }
+
+/*
+        div.no-match {
+            display: none;
+        }
+
+        div.match {
+            display: block;
+        }
+*/
     </style>
 
     <script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.17.custom.min.js"></script>
+    <script type="text/javascript" src="js/classes.js"></script>
+    <script type="text/javascript" src="js/champions.js"></script>
     <script type="text/javascript">
         jQuery.noConflict();
-        console.warn('TODO: write some auto-completing JS!');
-        // TODO: read this http://jqueryui.com/demos/autocomplete/#custom-data
-        // TODO: also read this http://jqueryui.com/demos/autocomplete/#folding
-        // TODO: define classes for Champion and Ability
-        // TODO: for now, only give abilities tags
 
-        var Ability = function(name, key, tags) {
-            this.name = name;
-            this.key = key;
-            this.tags = tags;
-        }
+        //console.debug(allChampions);
+        var QUERY_MIN_LENGTH = 3;
 
-        var Champion = function(name) {
-            this.name = name;
-            this.label = name;
-            this.value = name;
-            this.releaseDate = new Date(0);
-            this.abilities = [];
-            this.searchString = this.name;
-        }
-
-        // TODO: does JS support function overloading??
-        Champion.prototype.addAbility = function(name, key, tags) {
-            var ability = new Ability(name, key, tags);
-            this.abilities.push(ability);
-
-            // TODO: it's inefficient to rebuild this string *every time* we add a new ability
-            this.updateSearchString();
-        }
-
-        // TODO: use the new searchString variable to run the autocomplete!
-        Champion.prototype.updateSearchString = function() {
-            this.searchString = this.name.toLowerCase();
-
-
-            for(var i = 0; i < this.abilities.length; i++) {
-                this.searchString = this.searchString + ' ' + this.abilities[i].name.toLowerCase();
-                this.searchString = this.searchString + ' ' + this.abilities[i].key.toLowerCase();
-
-                for(var j = 0; j < this.abilities[i].tags.length; j++) {
-                    this.searchString = this.searchString + ' ' + this.abilities[i].tags[j].toLowerCase();
-                }
+        function championEntryAdd(champion) {
+            // TODO: look into jquery templates
+            jQuery('#champion-list').append('<div class="span14 champion-container" id="' + champion.id + '"></div>');
+            jQuery('#champion-list > div.champion-container:last').append('<h3>' + champion.name + '</h3>');
+            for(var a in champion.abilities) {
+                jQuery('#champion-list > div.champion-container:last').append('<div class="ability key-' + champion.abilities[a].key + '">' + champion.abilities[a].key.toUpperCase() + ' &ndash; ' + champion.abilities[a].name + '</div>');
             }
         }
 
-        // TODO: include scaling ratios in abilities
-        // TODO: include champion passive
+        function championListInit(champions) {
+            for(var c in champions) {
+                championEntryAdd(champions[c]);
+            }
+        }
 
-        var champions = [];
-
-        var newChamp = new Champion('Alistar');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Pulverize", 'Q', ['knockup', 'melee', 'stun', 'aoe', 'ap scaling', 'magic damage']);
-        newChamp.addAbility("Headbutt", 'W', ['targeted', 'knockback', 'ap scaling', 'melee', 'magic damage']);
-        newChamp.addAbility("Triumphant Roar", 'E', ['heal', 'ap scaling', 'ranged']);
-        newChamp.addAbility("Unbreakable Will", 'R', ['clense', 'ad buff', 'damage reduction', 'ultimate']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Annie');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Disintigrate", 'Q', ['targeted', 'ranged', 'ap scaling', 'magic damage']);
-        newChamp.addAbility("Incinerate", 'W', ['cone', 'ap scaling', 'melee', 'magic damage']);
-        newChamp.addAbility("Molten Shield", 'E', ['shield', 'armor buff', 'mr buff', 'ap scaling', 'self']);
-        newChamp.addAbility("Summon Tibbers", 'R', ['summon', 'targeted', 'aoe', 'magic damage', 'ultimate']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Ashe');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Frost Shot", 'Q', ['toggle', 'autoattack effect', 'frost', 'ranged']);
-        newChamp.addAbility("Volley", 'W', ['cone', 'slow', 'frost', 'ad scaling', 'ranged', 'physical damage']);
-        newChamp.addAbility("Hawkshot", 'E', ['passive', 'gold per kill', 'reveal', 'ranged']);
-        newChamp.addAbility("Enchanted Crystal Arrow", 'R', ['skillshot', 'long range', 'stun', 'aoe', 'slow', 'champions only', 'frost', 'ranged', 'magic damage', 'ultimate', 'global', 'long range']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Fiddlesticks');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Terrify", 'Q', ['fear', 'targeted', 'ranged']);
-        newChamp.addAbility("Drain", 'W', ['channel', 'drain', 'ap scaling']);
-        newChamp.addAbility("Dark Wind", 'E', ['ranged', 'damage', 'ap scaling', 'bounce', 'silence']);
-        newChamp.addAbility("Crowstorm", 'R', ['flash', 'aoe', 'channel']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Jax');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Leap Strike", 'Q', ['jump', 'ranged', 'ap scaling', 'ad scaling', 'physical damage']);
-        newChamp.addAbility("Empower", 'W', ['autoattack buff', 'ap scaling']);
-        newChamp.addAbility("Counter Strike", 'E', ['dodge', 'stun', 'ad scaling', 'physical damage']);
-        newChamp.addAbility("Grandmaster's Might", 'R', ['passive', 'autoattack buff', 'magic damage', 'ap scaling', 'ad scaling', 'bonus ad', 'bonus ap']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Kayle');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Reckoning", 'Q', ['targeted', 'magic damage', 'ap scaling', 'ad scaling', 'slow', 'damage amplification', 'ranged']);
-        newChamp.addAbility("Divine Blessing", 'W', ['heal', 'targeted', 'move speed buff', 'ap scaling', 'ranged']);
-        newChamp.addAbility("Righteous Fury", 'E', ['attack range increase', 'splash damage', 'magic damage', 'ad scaling']);
-        newChamp.addAbility("Intervention", 'R', ['ultimate', 'targeted', 'ranged', 'damage imune']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Master Yi');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        // TODO: how to tag "can hit multiple tagets but player only clicks once and it's not an "aoe" damage"??
-        newChamp.addAbility("Alpha Strike", 'Q', ['targeted', 'magic damage', 'ap scaling', 'jump', 'ranged']);
-        newChamp.addAbility("Meditate", 'W', ['heal', 'channel', 'armor buff', 'ap scaling', 'mr buff']);
-        newChamp.addAbility("Wuju Style", 'E', ['passive', 'ad bonus']);
-        // TODO: stun and/or root immune too?
-        newChamp.addAbility("Highlander", 'R', ['ultimate', 'move speed buff', 'attack speed buff', 'slow immune']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Morgana');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Dark Binding", 'Q', ['skillshot', 'magic damage', 'ap scaling', 'root']);
-        newChamp.addAbility("Tormented Soil", 'W', ['aoe', 'magic damage', 'damage over time', 'ap scaling', 'mr debuff']);
-        newChamp.addAbility("Black Shield", 'E', ['magic shield', 'disable immune', 'ap scaling']);
-        // TODO: aoe or some kind of "multiple targets"??
-        newChamp.addAbility("Soul Shackles", 'R', ['ultimate', 'slow', 'stun', 'magic damage', 'aoe', 'ap scaling']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Nunu');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Consume", 'Q', ['targeted', 'true damae', 'ap scaling', 'heal', 'minions only', 'melee']);
-        newChamp.addAbility("Blood Boil", 'W', ['allies only', 'targeted', 'attack speed buff', 'move speed buff']);
-        newChamp.addAbility("Ice Blast", 'E', ['magic damage', 'slow', 'ap scaling', 'targeted', 'frost']);
-        newChamp.addAbility("Absolute Zero", 'R', ['ultimate', 'slow', 'magic damage', 'aoe', 'ap scaling', 'move speed debuff', 'attack speed debuff']);
-        champions.push(newChamp);
-
-        newChamp = new Champion('Ryze');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Overload", 'Q', ['targeted', 'ap scaling', 'mana scaling']);
-        newChamp.addAbility("Rune Prison", 'W', ['root', 'targeted', 'ap scaling', 'mana scaling']);
-        newChamp.addAbility("Spell Flux", 'E', ['targeted', 'bounce', 'ap scaling', 'mr debuff']);
-        newChamp.addAbility("Desperate Power", 'R', ['spell vamp', 'AOE']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Sion');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Cryptic Gaze", 'Q', ['stun', 'targeted', 'ap scaling']);
-        newChamp.addAbility("Death's Caress", 'W', ['shield', 'aoe', 'ap scaling']);
-        newChamp.addAbility("Enrage", 'E', ['AD buff', 'permanent HP gain']);
-        newChamp.addAbility("Cannibalism", 'R', ['attack speed buff', 'life steal', 'aura', 'heal']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Sivir');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Boomerang Blade", 'Q', ['skillshot', 'ranged', 'passthrough', 'ad scaling', 'ap scaling', 'physical damage']);
-        newChamp.addAbility("Riccochet", 'W', ['bounce', 'physical damage', 'autoattack effect']);
-        newChamp.addAbility("Spell Shield", 'E', ['block debuff']);
-        newChamp.addAbility("On The Hunt", 'R', ['ultimate', 'attack speed buff', 'move speed buff', 'aura']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Soraka');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Starcall", 'Q', ['ranged', 'aoe', 'ap scaling', 'magic damage', 'mr debuff']);
-        newChamp.addAbility("Astral Blessing", 'W', ['targeted', 'allies only', 'heal', 'armor buff', 'ap scaling', 'ranged']);
-        newChamp.addAbility("Infuse", 'E', ['silence', 'restore mana', 'ap scaling', 'magic damage']);
-        newChamp.addAbility("Wish", 'R', ['ultimate', 'heal', 'global', 'ap scaling']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Teemo');
-        // TODO: include "yordle" in Teemo's tags
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Blinding Dart", 'Q', ['ranged', 'blind', 'ap scaling', 'magic damage']);
-        newChamp.addAbility("Move Quick", 'W', ['passive', 'move speed buff']);
-        newChamp.addAbility("Toxic Shot", 'E', ['passive', 'damage over time', 'ap scaling', 'magic damage', 'autoattack effect']);
-        newChamp.addAbility("Noxious Trap", 'R', ['ultimate', 'mushroom', 'placement', 'ap scaling', 'trap', 'magic damage', 'damage over time', 'slow', 'reveal', 'melee']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Tristana');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Rapid Fire", 'Q', ['active', 'attack speed buff']);
-        newChamp.addAbility("Rocket Jump", 'W', ['targeted', 'magic damage', 'ap scaling', 'slow', 'aoe', 'jump']);
-        newChamp.addAbility("Explosive Shot", 'E', ['passive', 'splash damage', 'autoattack effect', 'ap scaling', 'magic damage', 'targeted', 'enemies only', 'damage over time', 'hp regen debuff']);
-        newChamp.addAbility("Buster Shot", 'R', ['ultimate', 'targeted', 'enemies only', 'ap scaling', 'magic damage', 'knockback']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Twisted Fate');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Wild Cards", 'Q', ['ranged', 'cone', 'ap scaling', 'magic damage', 'passthrough', 'skillshot']);
-        newChamp.addAbility("Pick a Card", 'W', ['targeted', 'autoattack effect', 'stun', 'slow', 'ap scaling', 'restore mana', 'aoe', 'ad scaling', 'magic damage']);
-        newChamp.addAbility("Stacked Deck", 'E', ['passive', 'attack speed buff', 'cdr', 'ap scaling', 'magic damage', 'autoattack effect']);
-        newChamp.addAbility("Destiny//Gate", 'R', ['ultimate', 'reveal', 'teleport', 'global', 'channel']);
-        champions.push(newChamp);
-
-        var newChamp = new Champion('Warwick');
-        newChamp.releaseDate = new Date(2009, 2, 21);
-        newChamp.addAbility("Hungering Strike", 'Q', ['melee', 'magic damage', 'ap scaling', 'heal', 'targeted']);
-        newChamp.addAbility("Hunters Call", 'W', ['aoe', 'allies only', 'attack speed buff']);
-        newChamp.addAbility("Blood Scent", 'E', ['reveal', 'aoe', 'move speed buff', 'toggle']);
-        newChamp.addAbility("Infinite Duress", 'R', ['ultimate', 'jump', 'suppress', 'magic damage', 'life steal', 'ad scaling']);
-        champions.push(newChamp);
-
-
-        //console.debug(champions);
-
+        function updateSearchResults(matchedChampions, missedChampions) {
+            // hide all non-matching champions first
+            for(var c in missedChampions) {
+                jQuery('#' + missedChampions[c].id).removeClass('match').addClass('no-match').hide();
+            }
+            // show all matching champions second
+            for(var c in matchedChampions) {
+                jQuery('#' + matchedChampions[c].id).removeClass('no-match').addClass('match').show();
+            }
+        }
 
         jQuery(document).ready(function() {
-            jQuery('#query').autocomplete({
-                minLength: 3,
-                source: function(request, response) {
-                    var term = request.term.toLowerCase();
+            championListInit(allChampions);
+
+            jQuery('#query').bind('keyup', function(event) {
+                if(jQuery(this).val().length >= QUERY_MIN_LENGTH) {
+                console.log(jQuery(this).val());
+                console.log(jQuery(this).val().length);
+                    var term = jQuery(this).val().toLowerCase();
                     matches = [];
-                    for(var c = 0; c < champions.length; c++) {
-                        if(champions[c].searchString.indexOf(term) != -1) {
+                    misses = [];
+
+                    for(var c in allChampions) {
+                        if(allChampions[c].searchString.indexOf(term) != -1) {
                             // TODO: do a more thorough search of the champs attributes
                             // TODO: highlight which attribute(s) matched the query
-                            matches.push(champions[c]);
+                            matches.push(allChampions[c]);
+                        } else {
+                            misses.push(allChampions[c]);
                         }
                     }
-                    response(matches);
-                },
-/*
-                search: function(event, ui) {
-                    console.log('search');
-                    console.debug(event);
-                    console.debug(ui);
-                    return false;
-                },
-*/
-                open: function(event, ui) {
-                    console.log('open');
-                    console.debug(event);
-                    console.debug(ui);
-
-                    return false;
-                },
-                focus: function(event, ui) {
-                    console.log('focus');
-                    jQuery('#query').text(ui.item.name);
-
-                    return false;
-                },
-                select: function(event, ui) {
-                    console.log('select');
-                    console.warn('update your jquery ui theme');
-
-                    jQuery('#champion-name').text('');
-                    jQuery('#champion-abilities').empty();
-
-                    console.log('TODO: update the h1 text');
-                    jQuery('#champion-name').text(ui.item.name);
-
-                    console.log('TODO: update the ul items');
-                    for(var a = 0; a < ui.item.abilities.length; a++) {
-                        jQuery('#champion-abilities').append('<li>' + ui.item.abilities[a].name + '</li>');
-                    }
-
-                    console.log('TODO: show #champion-info');
-                    jQuery('#champion-info').show();
-
-                    return false;
+                    updateSearchResults(matches, misses);
+                } else if (jQuery(this).val().length == 0) {
+                    jQuery('#champion-list div.champion-container').removeClass('match').removeClass('no-match').show();
                 }
             });
 
@@ -338,13 +159,9 @@
                 </div>
             </div>
 
-            <div id="champion-info" class="row">
+            <div id="champion-list" class="row">
                 <div class="span4">
                     <h1 id="champion-name"></h1>
-                </div>
-                <div class="span4">
-                    <ul id="champion-abilities">
-                    </ul>
                 </div>
             </div>
 
