Tweaked updateSearchString() logic, 74/92 champs
* Champion.updateSearchString() is now only called once per
  champion initialization and now includes champion tags in
  the search string. However, the search logic still needs to
  be updated to work with champion tags in addition to ability
  tags.

* Added more champions. Currently at 74/92 total champions.

--- a/index.html
+++ b/index.html
@@ -126,8 +126,17 @@
                     for(var c in allChampions) {
                         champ = allChampions[c];
 
+                        // TODO: encapsulate search logic in a function belonging to the Champion class
                         if(allChampions[c].searchString.indexOf(term) != -1) {
                             abilityMatch = false;
+
+/*
+                            for(var t in champ.tags) {
+                                if(champ.tags[t].indexOf(term) != -1) {
+                                    tagMatch = true;
+                                }
+                            }
+*/
 
                             // TODO: do a more thorough search of the champs attributes
                             for(var a in champ.abilities) {
